try to fix bug on iphone

--- a/Social-Visor/styles/base/reset.css
+++ b/Social-Visor/styles/base/reset.css
@@ -58,3 +58,7 @@ meter {
 ::-webkit-details-marker {
     display: none;
 }
+
+button, a {
+    -webkit-tap-highlight-color: transparent;
+}
